<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fourth_pageDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">
        </FrameLayout>


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:layout_gravity="top"
            tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tripManagerId"
        style="@style/tripManagerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tripManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />


    <TextView
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helloString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />


    <TextView
        android:id="@+id/inputNameString"
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />


    <TextView
        android:id="@+id/dayInput"
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tripContentsString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <TextView
        android:id="@+id/from"
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326" />

    <TextView
        android:id="@+id/fromDateId"
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326" />

    <!--    to-->
    <TextView
        android:id="@+id/to"
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <TextView
        android:id="@+id/toDateId"
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <!--    destination-->

    <TextView
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <TextView
        android:id="@+id/destinationId"
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />


    <!--    number of people-->
    <TextView
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peopleString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/totalId"
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />


    <!--    Accommodation-->
    <TextView
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accommodationString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/selectedAccommodationId"
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

<!--    Way to go-->
    <TextView
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theWayString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64"
        tools:ignore="MissingConstraints" >

    <RadioButton
        android:id="@+id/carButton"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:text="@string/carString"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/trainButton"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:text="@string/trainString"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/planeButton"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:text="@string/airplaneString"
        tools:ignore="MissingConstraints" />
    </RadioGroup>

<!--Ticket-->

    <TextView
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticketAvilableString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <RadioGroup
        android:id="@+id/radioGroupForTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        tools:ignore="MissingConstraints" >

    <RadioButton
        android:id="@+id/yesButton"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:text="@string/yesString"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/noButton"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:text="@string/noString"
        tools:ignore="MissingConstraints" />
    </RadioGroup>

<!--ask for buying ticket-->
    <TextView
        style="@style/stringStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/askToBuyTicketString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <RadioGroup
        android:id="@+id/radioGroupForBuyingTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78"
        tools:ignore="MissingConstraints" >

        <RadioButton
            android:id="@+id/yesButton1"
            android:layout_width="95dp"
            android:layout_height="30dp"
            android:text="@string/yesString"
            tools:ignore="MissingConstraints" />

        <RadioButton
            android:id="@+id/noButton1"
            android:layout_width="95dp"
            android:layout_height="30dp"
            android:text="@string/noString"
            tools:ignore="MissingConstraints" />
    </RadioGroup>

    <Button
        android:id="@+id/buyNowButtonId"
        style="@style/NameButton"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:text="@string/buyNowString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />
    <!--    Prev, next button-->




    <Button
        android:id="@+id/prevButtonId"
        style="@style/NameButton"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:text="@string/prevString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

    <Button
        android:id="@+id/nextButtonId"
        style="@style/NameButton"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:text="@string/saveString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/myWebView"
        android:visibility="invisible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/nv3"
        tools:ignore="MissingConstraints">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>